# local-llm

./: .env.example  README.md  main.py  pyproject.toml
src/: app.py
src/a2a/orchestrator/: client.py  registry.py
src/agents/da_agent/: graph.py
src/mcp/server/math/: server.py
